# gitleakfix

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  release.sh
.claude/: settings.local.json
Formula/: leakfix.rb
benchmarks/: bench_fix.py
leakfix/: __main__.py  classifier.py  cli.py  fixer.py  gitignore.py  gitleaks-extended.toml  hooks.py  org_scanner.py  reporter.py  scanner.py  setup_wizard.py  ui.py  utils.py  watcher.py  wizard_app.py
leakfix/prompts/: fix_secret.txt
