[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leakfix"
version = "1.4.0"
description = "One-stop CLI tool to detect, remove and prevent secrets in git repositories"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "ollama>=0.1.0",
    "watchdog>=3.0.0",
    "Jinja2>=3.0.0",
    "playwright>=1.40.0",
    "rich>=13.0.0",
    "rich-gradient>=0.3.11",
    "GitPython>=3.1.0",
    "requests>=2.28.0",
    "questionary>=2.0.0",
    "textual>=0.60.0",
]

[project.optional-dependencies]
effects = ["terminaltexteffects>=0.11"]

[project.scripts]
leakfix = "leakfix.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["leakfix*"]
